--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ main {
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  transition: box-shadow 0.2 ease-out;
+  transition: box-shadow 0.2s ease-out;
 }
 
 .box.active {
